# LTE01R03A06_C_SDK_U

./: CMakeLists.txt  Kconfig  README.md  ble_gatt_demo (2).c  build_all.bat  build_all.sh  build_check.py
cmake/: extension.cmake
components/: CMakeLists.txt
components/apploader/: CMakeLists.txt
components/apploader/pack/: CMakeLists.txt  app_flashimg.ld  core_filelist.xml
components/apploader/src/: app_loader.c  core_config.cmake.in  core_export.list
components/appstart/: CMakeLists.txt  Kconfig
components/appstart/include/: app_config.h.in
components/appstart/src/: app_start.c
components/atr/: Kconfig
components/atr/include/: at_cfg.h  at_engine.h  at_param.h  at_response.h  atr_config.h.in
components/ats/: Kconfig
components/ats/audio/: Kconfig
components/ats/bt/: Kconfig
components/ats/cam/: Kconfig
components/ats/cc/: Kconfig
components/ats/coap/: Kconfig
components/ats/dm/: Kconfig
components/ats/ftp/: Kconfig
components/ats/gprs/: Kconfig
components/ats/http/: Kconfig
components/ats/include/: at_cfw.h  at_cmd_alic.h  at_cmd_audio.h  at_cmd_coap.h  at_cmd_dm_lwm2m.h  at_cmd_ftp.h  at_cmd_gprs.h  at_cmd_myftp.h  at_cmd_ss.h  at_cmd_ssim.h  at_cmd_tcpip.h  at_pm.h  ats_config.h.in  tb.h
components/ats/lwm2m/: Kconfig
components/ats/misc/: Kconfig
components/ats/mqtt/: Kconfig
components/ats/sms/: Kconfig
components/ats/tcpip/: Kconfig
components/ats/wifi/: Kconfig
components/audio/: Kconfig  core.cmake
components/audio/include/: audio_config.h.in  audio_decoder.h  audio_device.h  audio_player.h  audio_types.h
components/audio/src/: audio_decoder.c  audio_encoder.c
components/aworker/: CMakeLists.txt
components/aworker/include/: async_worker.h
components/bootloader/: CMakeLists.txt  Kconfig
components/bootloader/boot/: boot2_start_8910.c  boot_start_8910.c
components/bootloader/fdl1/: fdl1_main.c
components/bootloader/fdl2/: fdl2_main.c
components/bootloader/flash_test_fdl/: flash_test_main.c
components/bootloader/include/: boot_adi_bus.h  boot_config.h.in  boot_fdl_channel.h  boot_mmu.h  boot_platform.h  boot_secure.h  boot_simage.h  boot_timer.h
components/bootloader/ldscripts/: ramrun_uimage_arm.ld
components/bootloader/src/: boot_adi_bus.c  boot_delay.c  boot_fdl.c  boot_fdl_dnld.c  boot_irq.c  boot_lcd.c  boot_log.c  boot_mem.c  boot_mmu.c  boot_override.c  boot_pdl.c  boot_pdl_uimage.c  boot_secure.c  boot_sffs_port.c  boot_spi_flash.c  boot_stub.c  boot_timer.c  boot_trace.c  boot_uart.c  boot_udc.c  boot_unity.c  boot_usb_fdl_channel.c  boot_vfs.c
components/bootloader/src/8910/: boot_platform_8910.c  boot_secure.c
components/bt_app/: CMakeLists.txt  Kconfig  core.cmake
components/bt_app/bt_nv/: CMakeLists.txt  core.cmake
components/bt_app/include/: bt_abs.h  bt_app.h  bt_app_config.h.in  sci_types.h
components/calclib/: CMakeLists.txt
components/cfw/: Kconfig  core.cmake
components/cfw/include/: cfw.h  cfw_chset.h  cfw_config.h.in  cfw_event.h  cfw_tool.h  modem_config_ext.h.in
components/chip/: Kconfig  chip.cmake  chip_8910.cmake
components/connectivity/: CMakeLists.txt  Kconfig
components/connectivity/bt/: CMakeLists.txt  core.cmake
components/connectivity/include/: connectivity_config.h.in
components/diag/: Kconfig
components/diag/include/: diag.h  diag_at.h  diag_config.h.in  diag_nw.h
components/driver/: CMakeLists.txt  Kconfig  core.cmake
components/driver/include/: drv_adc.h  drv_axidma.h  drv_backlight.h  drv_camera.h  drv_config.h.in  drv_debug_port.h  drv_efuse.h  drv_ether.h  drv_gpio.h  drv_i2c.h  drv_ifc.h  drv_ipc_at.h  drv_keypad.h  drv_lcd.h  drv_lcd_v2.h  drv_md_ipc.h  drv_md_nvm.h  drv_names.h  drv_pmic_intr.h  drv_powerkey_8910.h  drv_ps_path.h  drv_pwm.h  drv_sdmmc.h  drv_sdmmc_imp.h  drv_secure.h  drv_spi.h  drv_spi_flash.h  drv_uart.h  drv_usb.h  drv_wcn.h  drv_wcn_ipc.h  image_sensor.h  rda_lcdc.h
components/driver/src/: drv_adc.c  drv_charger.c  drv_lcd_cfg.c  rda_fb.c
components/firmwareupdate/: CMakeLists.txt  Kconfig
components/firmwareupdate/include/: fupdate.h  fupdate_config.h.in  fupdate_security.h
components/firmwareupdate/src/: fupdate_security_pack.c
components/fs/: Kconfig
components/fs/bdev/: core.cmake
components/fs/fsmount/: CMakeLists.txt
components/fs/include/: fatfs_vfs.h  fs_config.h.in  (+2 more)
components/hal/: CMakeLists.txt  Kconfig
components/kernel/: CMakeLists.txt  Kconfig
components/libs/: CMakeLists.txt
components/lpa/: CMakeLists.txt  Kconfig
components/mal/: Kconfig
components/net/: CMakeLists.txt  Kconfig  core.cmake
components/nvm/: Kconfig
components/ql-application/: CMakeLists.txt  ql_app_feature_config.cmake  ql_app_feature_config.h.in
components/ql-application/cnktd/: CMakeLists.txt  ql_cnktd_coap.c  ql_cnktd_device.c  ql_cnktd_fs.c  ql_cnktd_http.c  ql_cnktd_nw.c  ql_cnktd_sms.c  ql_cnktd_socket.c  ql_cnktd_spi.c  ql_cnktd_uart.c
components/ql-application/cnktd/demo/: CMakeLists.txt  cnktd_demo.c  cnktd_http_demo.c  cnktd_nw_demo.c  cnktd_sms_demo.c  cnktd_socket_demo.c
components/ql-application/cnktd/demo/inc/: cnktd_demo.h  cnktd_http_demo.h  cnktd_nw_demo.h  cnktd_sms_demo.h  cnktd_socket_demo.h
components/ql-application/cnktd/inc/: ql_cnktd.h  ql_cnktd_coap.h  ql_cnktd_device.h  ql_cnktd_fs.h  ql_cnktd_http.h  ql_cnktd_nw.h  ql_cnktd_sms.h  ql_cnktd_socket.h  ql_cnktd_spi.h  ql_cnktd_ssl.h  ql_cnktd_uart.h
components/ql-kernel/: CMakeLists.txt  Kconfig
components/rpc/: Kconfig  core.cmake
components/service/: Kconfig
doc/: README.md  TimeLineRequirements.xlsx
ohos/device/quectel/ecx00u/sdk_liteos/: BUILD.gn  config.gni
ohos/device/quectel/ecx00u/sdk_liteos/platform/include/: compiler.h  los_config.h  target_config.h
ohos/device/quectel/ql_adapter/hals/iot_hardware/wifiiot_lite/: BUILD.gn  hal_iot_flash.c  hal_iot_gpio.c  hal_iot_i2c.c  hal_iot_pwm.c  hal_iot_uart.c  hal_iot_watchdog.c
ohos/ql_ohos/: core.cmake
tools/: build_all_target.sh  codesize.py  deliverpack.py  iomuxgen.py  launch.bat  launch.sh  modemgen.py  partinfogen.py
tools/linux/: dtools
(+649 files in other folders)
