# Copyright (C) 2020 Hisilicon (Shanghai) Technologies Co., Ltd. All rights reserved.

# [QUECTEL][OHOS]
declare_args(){
  # need write quectel csdk path
  ql_ohos_ql_sdk_topdir = ""

  ql_ohos_product_name = "ql_unisoc"
}

# Kernel type, e.g. "linux", "liteos_a", "liteos_m".
kernel_type = "liteos_m"

# Kernel version.
kernel_version = ""

# Board CPU type, e.g. "cortex-a7", "riscv32".
#board_cpu = "cortex-m4"
# board_cpu = "arm9"
board_cpu = "Cortex-A5"

# Board arch, e.g.  "armv7-a", "rv32imac".
# cortex-a5 not support, temp cortex-m4
board_arch = ""

# Toolchain name used for system compiling.
# E.g. gcc-arm-none-eabi, arm-linux-harmonyeabi-gcc, ohos-clang,  riscv32-unknown-elf.
# Note: The default toolchain is "ohos-clang". It's not mandatory if you use the default toolchain.
board_toolchain = "arm-none-eabi-gcc"

# The toolchain path installed, it's not mandatory if you have added toolchain path to your ~/.bashrc.
# board_toolchain_path = ""
board_toolchain_path = "${ql_ohos_ql_sdk_topdir}/prebuilts/win32/gcc-arm-none-eabi/bin"
# Compiler prefix.
board_toolchain_prefix = "arm-none-eabi-"

# Compiler type, "gcc" or "clang".
board_toolchain_type = "gcc"

# Board related common compile flags.
board_cflags = [
#  "-mthumb",
  "-Wall",
  "-mfloat-abi=hard",
  "-mfpu=neon-vfpv4",
#  "-fdata-sections",
#  "-ffunction-sections",
  "-fno-builtin",
  "-fno-strict-aliasing",
  "-fsigned-char",
  "-std=c99",
  "-DUSE_HAL_DRIVER",
  "-D__LITEOS_M__",
  "-Wformat=0",
  "-fno-stack-protector",
  "-DLOS_COMPILE_LDM",
  "-DLOS_COMPILE_LDM",
  "-DCMSIS_OS_VER=2",
  "-DLITEOS_WIFI_IOT_VERSION"
]
board_cxx_flags = board_cflags
board_ld_flags = []

# Board related headfiles search path.
board_include_dirs = [
  "//utils/native/lite/include",
  "//third_party/bounds_checking_function/include",
  "//foundation/distributedschedule/samgr_lite/interfaces/kits/samgr",
  # s code
  "${ql_ohos_ql_sdk_topdir}/components/quectel/ql_open/ql_api/ohos/include",
  "${ql_ohos_ql_sdk_topdir}/components/quectel/ql_open/ql_api/include",
  # csdk code
  "${ql_ohos_ql_sdk_topdir}/components/ql-kernel/inc",

  "//device/quectel/ecx00u/sdk_liteos/platform/include",
  "${ql_ohos_ql_sdk_topdir}/components/newlib/include",
  "//device/quectel/ql_adapter/kal/cmsis",
]

# Board adapter dir for OHOS components.
board_adapter_dir = "//device/quectel/ql_adapter"
#board_adapter_dir = ""

# Sysroot path.
board_configed_sysroot = ""

# Board storage type, it used for file system generation.
storage_type = ""
