static_library("hal_iothardware") {
  if (board_name == "ecx00u") {
    sources = [
      "hal_iot_gpio.c",
      "hal_iot_uart.c",
      "hal_iot_i2c.c",
      "hal_iot_pwm.c",
      "hal_iot_flash.c",
      "hal_iot_watchdog.c",
    ]
    include_dirs = [
      "//utils/native/lite/include",
      "//base/iot_hardware/peripheral/interfaces/kits",
      "//ql_ohos/ql_inc",
    ]
  }
}
